--- a/templates/partials/login-modal.html
+++ b/templates/partials/login-modal.html
@@ -70,7 +70,7 @@
     // Abrir modal
     if (openBtn) {
       openBtn.onclick = function() {
-        modal.style.display = 'block';
+        modal.style.display = 'flex';
         document.body.style.overflow = 'hidden';
       };
     }
